text-overflow fixes

--- a/index.css
+++ b/index.css
@@ -302,6 +302,7 @@ input[name='switcher']
     height: 18px;
     line-height: 18px;
     margin: 0;
+    max-width: 100%;
     padding: 16px 0 4px;
     position: absolute;
 }
